Increase height of map and fix on safari

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -428,13 +428,13 @@ section.speakers .qcTabTitle .section-title {
 }
 
 .venue-section .venue-info-map {
-	margin:0;
+	margin: 0;
 }
 
 .venue-section .venue-info-bg {
 	padding: 3em;
 	color: #F1D8D3;
-	line-height: 1.5;
+	line-height: 2.4;
 }
 
 .venue-section iframe {
